@@ -1,7 +1,10 @@
 package com.jadaptive.app.db;
 
+import java.awt.image.BufferedImage;
+import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.io.UnsupportedEncodingException;
 import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
@@ -11,7 +14,9 @@ import java.net.URL;
 import java.text.ParseException;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Base64;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -19,31 +24,47 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Properties;
+import java.util.Random;
 import java.util.Set;
 
+import javax.imageio.ImageIO;
+import javax.servlet.http.HttpServletRequest;
+
+import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang.StringUtils;
 import org.apache.commons.lang.math.NumberUtils;
+import org.bouncycastle.crypto.digests.SHA256Digest;
+import org.bouncycastle.util.encoders.Hex;
 import org.bson.Document;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.web.multipart.MultipartFile;
+import org.springframework.web.multipart.support.StandardMultipartHttpServletRequest;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.jadaptive.api.app.ApplicationServiceImpl;
 import com.jadaptive.api.entity.AbstractObject;
 import com.jadaptive.api.entity.ObjectException;
 import com.jadaptive.api.entity.ObjectService;
-import com.jadaptive.api.repository.AbstractUUIDEntity;
+import com.jadaptive.api.repository.NamedDocument;
 import com.jadaptive.api.repository.ReflectionUtils;
 import com.jadaptive.api.repository.RepositoryException;
 import com.jadaptive.api.repository.UUIDDocument;
 import com.jadaptive.api.repository.UUIDEntity;
 import com.jadaptive.api.repository.UUIDObjectService;
+import com.jadaptive.api.repository.UUIDReference;
 import com.jadaptive.api.template.FieldTemplate;
 import com.jadaptive.api.template.FieldType;
 import com.jadaptive.api.template.ObjectDefinition;
 import com.jadaptive.api.template.ObjectField;
 import com.jadaptive.api.template.ObjectServiceBean;
-import com.jadaptive.app.ApplicationServiceImpl;
+import com.jadaptive.api.template.ObjectTemplate;
+import com.jadaptive.api.template.TemplateService;
+import com.jadaptive.api.template.ValidationException;
+import com.jadaptive.api.template.ValidationType;
 import com.jadaptive.app.ClassLoaderServiceImpl;
 import com.jadaptive.app.encrypt.EncryptionServiceImpl;
+import com.jadaptive.app.entity.MongoEntity;
 import com.jadaptive.utils.Utils;
 
 public class DocumentHelper {
@@ -66,14 +87,14 @@ public class DocumentHelper {
 	public static void convertObjectToDocument(UUIDDocument obj, Document document) throws RepositoryException, ObjectException {
 
 		try {
-			
+
 			if(StringUtils.isNotBlank(obj.getUuid())) {
 				document.put("_id", obj.getUuid());
 			}
-			
-			
+
 			document.put("_clz", obj.getClass().getName());
-			
+			document.put("resourceKey", obj.getResourceKey());
+			 
 			Map<String,Field> fields = ReflectionUtils.getFields(obj.getClass());
 			
 			for(Method m : ReflectionUtils.getGetters(obj.getClass())) {
@@ -93,9 +114,13 @@ public class DocumentHelper {
 						document.put(name, ((Enum<?>)value).name());
 					} else if(UUIDDocument.class.isAssignableFrom(m.getReturnType())) {
 						if(Objects.isNull(columnDefinition) || columnDefinition.type() == FieldType.OBJECT_EMBEDDED) {
-							buildDocument(name, (UUIDDocument)value, m.getReturnType(), document);
+							buildDocument(name, (UUIDDocument)value, document);
 						} else if(Objects.nonNull(value)) {
-							document.put(name, ((UUIDDocument)value).getUuid());
+							if(value instanceof UUIDReference) {
+								buildDocument(name, (UUIDReference) value, document);
+							} else {
+								buildDocument(name, buildReference((UUIDEntity)value), document);
+							}
 						}
 					} else if(Collection.class.isAssignableFrom(m.getReturnType())) {
 						buildCollectionDocuments(name, columnDefinition, (Collection<?>)value, m.getReturnType(), document);
@@ -106,11 +131,20 @@ public class DocumentHelper {
 			}
 			
 		} catch (SecurityException | IllegalAccessException | IllegalArgumentException | InvocationTargetException | RepositoryException | ParseException e) {
-			throw new RepositoryException(String.format("Unexpected error storing UUID entity %s", obj.getClass().getName()), e);		
+			log.error("Error converting document", e);
+			throw new RepositoryException(String.format("Unexpected error storing U%s", obj.getClass().getName()), e);		
 		}
-		
 	}
 
+	private static UUIDReference buildReference(UUIDEntity e) {
+		
+		if(e instanceof NamedDocument) {
+			return generateReference(e.getUuid(), ((NamedDocument)e).getName());
+		} else {
+			return generateReference(e.getUuid(), e.getUuid());
+		}
+	}
+	
 	private static boolean isSupportedPrimative(Class<?> returnType) {
 		if(returnType.equals(Integer.class)) {
 			return true;
@@ -166,17 +200,21 @@ public class DocumentHelper {
 				list.add(value);
 			} else if(value.getClass().isEnum()) {
 				list.add(((Enum<?>)value).name());
-//			} else if(value instanceof ObjectReference2) {
-//				list.add(((ObjectReference2)value).toMap());
 			} else if(UUIDEntity.class.isAssignableFrom(value.getClass())) {
 
-				AbstractUUIDEntity e = (AbstractUUIDEntity) value;
+				UUIDEntity e = (UUIDEntity) value;
 				if(Objects.isNull(columnDefinition) || columnDefinition.type() == FieldType.OBJECT_EMBEDDED) {
 					Document embeddedDocument = new Document();
 					convertObjectToDocument(e, embeddedDocument);
 					list.add(embeddedDocument);
+				} else if(e instanceof NamedDocument) {
+					Document embeddedDocument = new Document();
+					convertObjectToDocument(generateReference(e.getUuid(), ((NamedDocument)e).getName()), embeddedDocument);
+					list.add(embeddedDocument);
 				} else {
-					list.add(e.getUuid());
+					throw new IllegalStateException(
+							String.format("Referenced UUIDEntity %s MUST implement NamedDocument or extend NamedUUIDEntity!",
+									e.getClass().getSimpleName()));
 				}
 			} else {
 				list.add(checkForAndPerformEncryption(columnDefinition,value.toString()));
@@ -186,19 +224,240 @@ public class DocumentHelper {
 		document.put(name, list);
 	}
 
-	public static void buildDocument(String name, UUIDDocument object, Class<?> type, Document document) throws RepositoryException, ParseException, ObjectException {
+	public static void buildDocument(String name, UUIDDocument object, Document document) throws RepositoryException, ParseException, ObjectException {
 		
 		Document embedded = new Document();
 		convertObjectToDocument(object, embedded);
 		document.put(name, embedded);
 	}
 
-	public static <T extends UUIDDocument> T convertDocumentToObject(Class<?> baseClass, Document document) {
+	public static <T extends UUIDDocument> T convertDocumentToObject(Class<?> baseClass, Document document) throws ObjectException, ValidationException {
 		return convertDocumentToObject(baseClass, document, baseClass.getClassLoader());
 	}
+	
+	private static String getParameter(HttpServletRequest request, FieldTemplate field) {
+		return getParameter(request, field.getFormVariable());
+	}
+	
+	private static String getTextParameter(HttpServletRequest request, FieldTemplate field) {
+		return getParameter(request, String.format("%sText", field.getFormVariable()));
+	}
+	
+	private static String getParameter(HttpServletRequest request, String formVariable) {
+//		switch(field.getFieldType()) {
+//		case TEXT:
+//			return Encode.forJava(request.getParameter(formVariable));
+//			break;
+//		case TEXT_AREA:
+//			return Encode.forJava(request.getParameter(formVariable))
+//		default:
+//			try {
+//				return URLDecoder.decode(request.getParameter(formVariable), "UTF-8");
+//			} catch (UnsupportedEncodingException e) {
+//				return "";
+//			}
+//		}
+		return request.getParameter(formVariable);
+	}
+
+	public static AbstractObject buildObject(HttpServletRequest request, String fieldName, ObjectTemplate template) throws IOException, ValidationException {
+
+		if(log.isDebugEnabled()) {
+			log.debug("Building object {} using template {}", fieldName, template.getResourceKey());
+		}
+		
+		MongoEntity obj = new MongoEntity(fieldName);
+		String uuid = request.getParameter("uuid");
+		if(StringUtils.isNotBlank(uuid)) {
+			obj.setUuid(uuid);
+		}
+		String system = request.getParameter("system");
+		if(Objects.nonNull(system)) {
+			obj.setSystem(Boolean.valueOf(system));
+		}
+		String hidden = request.getParameter("hidden");
+		if(Objects.nonNull(hidden)) {
+			obj.setHidden(Boolean.valueOf(hidden));
+		}
+
+		if(StringUtils.isNotBlank(template.getTemplateClass())) {
+			obj.setValue("_clz", template.getTemplateClass());
+		}
+		for(FieldTemplate field : template.getFields()) {
+			
+			if(log.isDebugEnabled()) {
+				log.debug("Processing field {} using form variable {}", field.getResourceKey(), field.getFormVariable());
+			}
+			
+			if(field.getCollection()) {
+				obj.setValue(field, convertValues(field, request));
+			} else {
+				obj.setValue(field, convertValue(field, request));
+			}
+
+		}
+		
+		return obj;
+	}
+	
+	private static Object convertValue(FieldTemplate field, HttpServletRequest request) throws IOException, ValidationException {
+		
+		String value = getParameter(request, field);
+
+		switch(field.getFieldType()) {
+		case OBJECT_EMBEDDED:
+		{
+			ObjectTemplate template = ApplicationServiceImpl.getInstance().getBean(TemplateService.class)
+					.get(field.getValidationValue(ValidationType.RESOURCE_KEY));
+			return buildObject(request, 
+					template.getResourceKey(),
+					template).getDocument();
+		}
+		case OBJECT_REFERENCE:
+		{	
+			if(log.isDebugEnabled()) {
+				log.debug("Returning {} as reference {}", field.getResourceKey(), value);
+			}
+
+			String name = getTextParameter(request, field);
+			
+			Document doc = new Document();
+			convertObjectToDocument(generateReference(getParameter(request, field), name), doc);
+			return doc;
+		}
+		case BOOL:
+			if(Objects.isNull(value)) {
+				return false;
+			} else {
+				return Boolean.valueOf(value);
+			}
+		case IMAGE:
+			if(request instanceof StandardMultipartHttpServletRequest) {
+				List<MultipartFile> file = ((StandardMultipartHttpServletRequest)request).getMultiFileMap().get(field.getFormVariable());
+				if(file.isEmpty()) {
+					return getParameter(request, field.getFormVariable() + "_previous");
+				}
+				if(file.size() > 1) {
+					throw new IllegalStateException("Multiple file parts for single value!");
+				}
+				MultipartFile f = file.get(0);
+				
+				String encoded = Base64.getEncoder().encodeToString(IOUtils.toByteArray(f.getInputStream()));
+				if(StringUtils.isBlank(encoded)) {
+					return getParameter(request, field.getFormVariable() + "_previous");
+				}
+				try(ByteArrayInputStream in = new ByteArrayInputStream(Base64.getDecoder().decode(encoded))) {
+					BufferedImage bimg = ImageIO.read(in);
+					if(Objects.isNull(bimg)) {
+						throw new ValidationException(String.format("The file %s does not appear to contain an image!", f.getOriginalFilename()));
+					}
+					
+					int width          = bimg.getWidth();
+					int height         = bimg.getHeight();
+					
+					int maxHeight = field.getValidationValueInt(ValidationType.IMAGE_HEIGHT, -1);
+					int maxWidth = field.getValidationValueInt(ValidationType.IMAGE_WIDTH, -1);
+					
+					if(maxWidth > -1 && maxWidth < width) {
+						throw new ValidationException(String.format("Image dimensions are %dx%d but must not exceed %dx%d", width, height, maxWidth, maxHeight));
+					}
+					
+					if(maxHeight > -1 && maxHeight < height) {
+						throw new ValidationException(String.format("Image dimensions are %dx%d but must not exceed %dx%d", width, height, maxWidth, maxHeight));
+					}
+					
+					if(StringUtils.isNotBlank(f.getOriginalFilename()) && f.getSize() > 0) {
+						return String.format("data:%s;base64, %s", f.getContentType(), encoded);
+					}
+				}
+				
+			}
+			return getParameter(request, field.getFormVariable() + "_previous");
+		case FILE:
+			if(request instanceof StandardMultipartHttpServletRequest) {
+				List<MultipartFile> file = ((StandardMultipartHttpServletRequest)request).getMultiFileMap().get(field.getFormVariable());
+				if(file.isEmpty()) {
+					return null;
+				}
+				if(file.size() > 1) {
+					throw new IllegalStateException("Multiple file parts for single value!");
+				}
+				MultipartFile f = file.get(0);
+				if(StringUtils.isNotBlank(f.getOriginalFilename()) && f.getSize() > 0) {
+					return Base64.getEncoder().encodeToString(IOUtils.toByteArray(f.getInputStream()));
+				}
+			}
+			return getParameter(request, field.getFormVariable() + "_previous");
+		default:
+			if(Objects.isNull(value)) {
+				
+				if(log.isDebugEnabled()) {
+					log.debug("Returning {} value NULL", field.getResourceKey());
+				}
+				return null;
+			}
+			if(log.isDebugEnabled()) {
+				log.debug("Returning {} value {}", field.getResourceKey(), value);
+			}
+			return fromString(field, value);
+		}
+	}
+	
+	private static List<Object> convertValues(FieldTemplate field, HttpServletRequest request) throws IOException, ValidationException {
+		
+		String fieldName = field.getFormVariable();
+		
+		List<Object> result = new ArrayList<>();
+		String[] values = request.getParameterValues(fieldName);
+		if(Objects.isNull(values) || values.length == 0) {
+			return result;
+		}
+		
+		switch(field.getFieldType()) {
+		case OBJECT_EMBEDDED:
+			
+			ObjectMapper mapper = new ObjectMapper();
+
+			for(String value : values) {
+				String json = new String(Base64.getUrlDecoder().decode(value), "UTF-8");
+				result.add(mapper.readValue(json, MongoEntity.class).getDocument());
+			}
+
+			break;
+		case OBJECT_REFERENCE:
+		{
+			String[] names = request.getParameterValues(String.format("%sText", field.getFormVariable()));
+			for(int i=0;i<values.length;i++) {
+				Document doc = new Document();
+				convertObjectToDocument(generateReference(values[i], names[i]), doc);
+				result.add(doc);
+			}
+			break;
+		}
+		default:
+		{
+			for(String value : values) {
+				result.add(fromString(field, value));
+			}
+			break;
+		}
+		}
+		
+		if(log.isDebugEnabled()) {
+			log.debug("Extracted {} values", field.getResourceKey(), Utils.csv(values));
+		}
+		
+		return result;
+	}
+
+
+	private static UUIDReference generateReference(String uuid, String name) {
+		return new UUIDReference(uuid, name);
+	}
+
 
 	@SuppressWarnings("unchecked")
-	public static <T extends UUIDDocument> T convertDocumentToObject(Class<?> baseClass, Document document, ClassLoader classLoader) {
+	public static <T extends UUIDDocument> T convertDocumentToObject(Class<?> baseClass, Document document, ClassLoader classLoader) throws ObjectException, ValidationException {
 		
 		try {
 			
@@ -215,12 +474,20 @@ public class DocumentHelper {
 			
 			try {
 				clz = processClassNameChanges(clz, classLoader);
-				obj = (T) classLoader.loadClass(clz).newInstance();
-			} catch(ClassNotFoundException e) {
-				obj = (T) ClassLoaderServiceImpl.getInstance().findClass(clz).newInstance();
+				obj = (T) classLoader.loadClass(clz).getConstructor().newInstance();
+			} catch(ClassNotFoundException | NoSuchMethodException | InstantiationException e) {
+				String resourceKey = document.getString("resourceKey");
+				if(Objects.nonNull(resourceKey)) {
+					obj = (T) ApplicationServiceImpl.getInstance().getBean(TemplateService.class).getTemplateClass(resourceKey).getConstructor().newInstance();
+				} else {		
+					obj = (T) ClassLoaderServiceImpl.getInstance().findClass(clz).getConstructor().newInstance();
+				}
 			}
-
+			
 			String uuid = (String) document.get("_id");
+			if(Objects.isNull(uuid)) {
+				uuid = document.getString("uuid");
+			}
 			obj.setUuid(uuid);
 			
 			Map<String,Field> fields = ReflectionUtils.getFields(obj.getClass());
@@ -242,7 +509,7 @@ public class DocumentHelper {
 				Parameter parameter = m.getParameters()[0];
 				Object value = document.get(name);
 				if(Objects.isNull(value) && Objects.nonNull(columnDefinition)) {
-					value = fromString(parameter.getType(), columnDefinition.defaultValue());
+					value = fromString(parameter.getType(), columnDefinition.type(), columnDefinition.defaultValue());
 				}
 				if(Objects.isNull(value) && parameter.getType().isPrimitive()) {
 					continue;
@@ -251,7 +518,7 @@ public class DocumentHelper {
 					m.invoke(obj, checkForAndPerformDecryption(columnDefinition, (String) value));
 				} else if(isSupportedPrimative(parameter.getType())) {
 					if(!parameter.getType().equals(String.class) && value instanceof String) {
-						m.invoke(obj, fromString(parameter.getType(), (String) value));
+						m.invoke(obj, fromString(parameter.getType(), columnDefinition.type(), (String) value));
 					} else {
 						m.invoke(obj, value);
 					}
@@ -269,21 +536,29 @@ public class DocumentHelper {
 						
 						m.invoke(obj, convertDocumentToObject(UUIDEntity.class, (Document) doc, classLoader));
 					} else {
-						String objectUUID =  document.getString(name);
-						ObjectServiceBean service = parameter.getType().getAnnotation(ObjectServiceBean.class);
-						if(Objects.nonNull(service)) {
-							UUIDObjectService<?> bean = (UUIDObjectService<?>) ApplicationServiceImpl.getInstance().getBean(service.bean());
-							Object ref = bean.getObjectByUUID(objectUUID);
-							m.invoke(obj, ref);
-						} else {
-							String resourceKey = getTemplateResourceKey(parameter.getType());
-							
-							if(StringUtils.isNotBlank(objectUUID)) {
-								AbstractObject e = (AbstractObject) ApplicationServiceImpl.getInstance().getBean(ObjectService.class).get(resourceKey, objectUUID);
+						Object objectUUID =  document.get(name);
+						if(objectUUID instanceof Document) {
+							objectUUID = document.get(name, Document.class).get("uuid");
+						} 
+						
+						if(StringUtils.isNotBlank((String)objectUUID)) {
+							ObjectServiceBean service = parameter.getType().getAnnotation(ObjectServiceBean.class);
+							if(Objects.nonNull(service)) {
+								
+								UUIDObjectService<?> bean = (UUIDObjectService<?>) ApplicationServiceImpl.getInstance().getBean(service.bean());
+								Object ref = bean.getObjectByUUID((String)objectUUID);
+								m.invoke(obj, ref);
+								
+							} else {
+								String resourceKey = getTemplateResourceKey(parameter.getType());
+
+								AbstractObject e = (AbstractObject) ApplicationServiceImpl.getInstance().getBean(ObjectService.class).get(resourceKey, (String)objectUUID);
 								Object ref = convertDocumentToObject(parameter.getType(), new Document(e.getDocument())); 
 								m.invoke(obj, ref);
+								
 							}
 						}
+						
 					}
 				} else if(parameter.getType().isEnum()) { 
 					String v = (String) value;
@@ -309,21 +584,25 @@ public class DocumentHelper {
 					Class<?> type = (Class<?>) o.getActualTypeArguments()[0];
 					List<?> list = (List<?>) document.get(name);
 					if(Objects.isNull(list)) {
+						m.invoke(obj, Collections.emptySet());
 						continue;
 					}
 					if(UUIDEntity.class.isAssignableFrom(type)) {
-						Collection<AbstractUUIDEntity> elements = new ArrayList<>();	
+						Collection<UUIDEntity> elements = new ArrayList<>();	
 						for(Object embedded : list) {
 							if(Objects.isNull(columnDefinition) || columnDefinition.type() == FieldType.OBJECT_EMBEDDED) {
 								Document embeddedDocument = (Document) embedded;
 								elements.add(convertDocumentToObject(UUIDEntity.class, embeddedDocument, classLoader));
-							} else {
-								String resourceKey = getTemplateResourceKey(parameter.getType());
-								String objectUUID =  document.getString(name);
-								AbstractObject e = (AbstractObject) ApplicationServiceImpl.getInstance().getBean(ObjectService.class).get(resourceKey, objectUUID);
-								
-								AbstractUUIDEntity ref = convertDocumentToObject(parameter.getType(), new Document(e.getDocument())); 
-								elements.add(ref);
+							} else if(embedded instanceof Document) {
+								UUIDReference ref = DocumentHelper.convertDocumentToObject(UUIDReference.class, (Document) embedded);
+								AbstractObject e = (AbstractObject) 
+										ApplicationServiceImpl.getInstance().getBean(ObjectService.class).get(
+												columnDefinition.references(), ref.getUuid());
+								UUIDEntity ue = convertDocumentToObject(
+										ApplicationServiceImpl.getInstance().getBean(TemplateService.class).getTemplateClass(columnDefinition.references()),
+										new Document(e.getDocument()), 
+										classLoader); 
+								elements.add(ue);
 							}
 						}
 
@@ -331,29 +610,33 @@ public class DocumentHelper {
 						
 					} else {
 						
-						if(type.equals(String.class)) {
-							m.invoke(obj, buildStringCollection(columnDefinition, list));
-						} else if(type.equals(Boolean.class)) {
-							m.invoke(obj, buildBooleanCollection(columnDefinition, list));
-						} else if(type.equals(Integer.class)) {
-							m.invoke(obj, buildIntegerCollection(columnDefinition, list));
-						} else if(type.equals(Long.class)) {
-							m.invoke(obj, buildLongCollection(columnDefinition, list));
-						} else if(type.equals(Float.class)) {
-							m.invoke(obj, buildFloatCollection(columnDefinition, list));
-						} else if(type.equals(Double.class)) {
-							m.invoke(obj, buildDoubleCollection(columnDefinition, list));
-						} else if(type.equals(Date.class)) {
-							m.invoke(obj, buildDateCollection(columnDefinition, list));
-						} else if(type.isEnum()) {  
-							m.invoke(obj, buildEnumCollection(list, type));
-//						} else if(type.equals(ObjectReference2.class)) {  
-//							m.invoke(obj, buildReferenceCollection(list, type));
+						if(list.isEmpty()) {
+							m.invoke(obj, new HashSet<>());
 						} else {
-							throw new IllegalStateException(
-									String.format("Unexpected collection type %s in object setter %s",
-									type.getName(),
-									name));
+							if(type.equals(String.class)) {
+								m.invoke(obj, buildStringCollection(columnDefinition, list));
+							} else if(type.equals(Boolean.class)) {
+								m.invoke(obj, buildBooleanCollection(columnDefinition, list));
+							} else if(type.equals(Integer.class)) {
+								m.invoke(obj, buildIntegerCollection(columnDefinition, list));
+							} else if(type.equals(Long.class)) {
+								m.invoke(obj, buildLongCollection(columnDefinition, list));
+							} else if(type.equals(Float.class)) {
+								m.invoke(obj, buildFloatCollection(columnDefinition, list));
+							} else if(type.equals(Double.class)) {
+								m.invoke(obj, buildDoubleCollection(columnDefinition, list));
+							} else if(type.equals(Date.class)) {
+								m.invoke(obj, buildDateCollection(columnDefinition, list));
+							} else if(type.isEnum()) {  
+								m.invoke(obj, buildEnumCollection(list, type));
+	//						} else if(type.equals(ObjectReference2.class)) {  
+	//							m.invoke(obj, buildReferenceCollection(list, type));
+							} else {
+								throw new IllegalStateException(
+										String.format("Unexpected collection type %s in object setter %s",
+										type.getName(),
+										name));
+							}
 						}
 					}  
 				} else {
@@ -365,12 +648,17 @@ public class DocumentHelper {
 			}
 			
 			return obj;
-		} catch (SecurityException | IllegalAccessException | IllegalArgumentException | InvocationTargetException | RepositoryException | InstantiationException | ClassNotFoundException | ParseException e) {
+		} catch (SecurityException | IllegalAccessException | NoSuchMethodException | IllegalArgumentException | InvocationTargetException | RepositoryException | InstantiationException | ParseException | ClassNotFoundException e) {
+			log.error("Error converting document", e);
 			throw new RepositoryException(String.format("Unexpected error loading UUID entity %s", baseClass.getName()), e);			
 		}
 		
 	}
 
+	public static void registerClassNameChange(String from, String to) {
+		classNameChanges.put(from, to);
+	}
+	
 	public static String processClassNameChanges(String clz, ClassLoader classLoader) {
 		
 		String change = classNameChanges.get(clz);
@@ -400,72 +688,111 @@ public class DocumentHelper {
 	}
 
 
-	public static Object fromString(Class<?> type, String value) {
+	public static Object fromString(Class<?> type, FieldType t, String value) {
 		if(type.equals(boolean.class)) {
+			assertType(t, FieldType.BOOL);
 			return Boolean.parseBoolean(StringUtils.defaultIfEmpty(value, "false"));
 		} else if(type.equals(Boolean.class)) {
-			return new Boolean(Boolean.parseBoolean(StringUtils.defaultIfEmpty(value, "false")));
+			assertType(t, FieldType.BOOL);
+			return Boolean.valueOf(Boolean.parseBoolean(StringUtils.defaultIfEmpty(value, "false")));
 		} else if(type.equals(int.class)) {
+			assertType(t, FieldType.INTEGER);
 			return Integer.parseInt(StringUtils.defaultIfEmpty(value, "0"));
 		} else if(type.equals(Integer.class)) {
-			return new Integer(Integer.parseInt(StringUtils.defaultIfEmpty(value, "0")));
+			assertType(t, FieldType.INTEGER);
+			return Integer.valueOf(Integer.parseInt(StringUtils.defaultIfEmpty(value, "0")));
 		} else if(type.equals(long.class)) {
+			assertType(t, FieldType.LONG);
 			return Long.parseLong(StringUtils.defaultIfEmpty(value, "0"));
 		} else if(type.equals(Long.class)) {
-			return new Long(Long.parseLong(StringUtils.defaultIfEmpty(value, "0")));
+			assertType(t, FieldType.LONG);
+			return Long.valueOf(Long.parseLong(StringUtils.defaultIfEmpty(value, "0")));
 		} else if(type.equals(float.class)) {
+			assertType(t, FieldType.DECIMAL);
 			return Float.parseFloat(StringUtils.defaultIfEmpty(value, "0"));
 		} else if(type.equals(Float.class)) {
-			return new Float(Float.parseFloat(StringUtils.defaultIfEmpty(value, "0")));
+			assertType(t, FieldType.DECIMAL);
+			return Float.valueOf(Float.parseFloat(StringUtils.defaultIfEmpty(value, "0")));
 		} else if(type.equals(double.class)) {
+			assertType(t, FieldType.DECIMAL);
 			return Double.parseDouble(StringUtils.defaultIfEmpty(value, "0"));
 		} else if(type.equals(Double.class)) {
-			return new Double(Double.parseDouble(StringUtils.defaultIfEmpty(value, "0")));
+			assertType(t, FieldType.DECIMAL);
+			return Double.valueOf(Double.parseDouble(StringUtils.defaultIfEmpty(value, "0")));
 		} else if(type.equals(Date.class)) {
-			if(StringUtils.isNotBlank(value)) {
-				return Utils.parseDate(value, "yyyy-MM-dd'T'HH:mm:ss.SSS'Z'");
+			if(t==FieldType.TIMESTAMP) {
+				if(StringUtils.isNotBlank(value)) {
+					try {
+						return Utils.parseTimestamp(value);
+					} catch (Throwable e) {
+						return Utils.parseDateTime(value);
+					}
+				} else {
+					return null;
+				}
 			} else {
-				return null;
+				if(StringUtils.isNotBlank(value)) {
+					return Utils.parseDate(value, "yyyy-MM-dd");
+				} else {
+					return null;
+				}
 			}
 		} else {
 			return value;
 		}
 	}
 	
-	public static Object fromString(FieldTemplate def, String value) {
+	private static void assertType(FieldType type, FieldType... types) {
+		for(FieldType t : types) {
+			if(type == t) {
+				return;
+			}
+		}
+		throw new IllegalStateException(String.format("Invalid object for field %s", type));
+	}
+
+
+	public static Object fromString(FieldTemplate def, String value) throws ValidationException {
 		switch(def.getFieldType()) {
 		case BOOL:
 			if(StringUtils.isNotBlank(value)) {
-				return Boolean.parseBoolean(value);
+				return DocumentValidator.validate(def,value);
 			} else {
 				return false;
 			}
 		case DECIMAL:
 			if(StringUtils.isNotBlank(value)) {
-				return Double.parseDouble(value);
+				return DocumentValidator.validate(def,value);
 			} else {
 				return null;
 			}
 		case INTEGER:
 			if(StringUtils.isNotBlank(value)) {
-				return Integer.parseInt(value);
+				return DocumentValidator.validate(def,value);
 			} else {
 				return null;
 			}
 		case LONG:
 			if(StringUtils.isNotBlank(value)) {
-				return Long.parseLong(value);
+				return DocumentValidator.validate(def,value);
 			} else {
 				return null;
 			}
 		case PASSWORD:
 		case TEXT:
 		case TEXT_AREA:
+		case PERMISSION:
 		case ENUM:
-			return value;
+			return DocumentValidator.validate(def,value);
 		case TIMESTAMP:
 			if(StringUtils.isNotBlank(value)) {
-				return Utils.parseDate(value, "yyyy-MM-dd'T'HH:mm:ss.SSS'Z'");
+				return Utils.parseTimestamp(value);
+			} else {
+				return null;
+			}
+		case DATE:
+			if(StringUtils.isNotBlank(value)) {
+				return Utils.parseDate(value, "yyyy-MM-dd");
 			} else {
 				return null;
 			}
@@ -475,7 +802,7 @@ public class DocumentHelper {
 	}
 
 	private static Object buildStringCollection(ObjectField columnDefinition, List<?> list) {
-		Collection<String> v = new HashSet<>();
+		Collection<String> v = new ArrayList<>();
 		for(Object item : list) {
 			v.add(checkForAndPerformDecryption(columnDefinition, item.toString()));
 		}
@@ -493,7 +820,7 @@ public class DocumentHelper {
 	
 	private static Object buildEnumCollection(List<?> items, Class<?> type) {
 
-		Collection<Enum<?>> v = new HashSet<>();
+		Collection<Enum<?>> v = new ArrayList<>();
 		for(Object item : items) {
 			Enum<?>[] enumConstants = (Enum<?>[]) type.getEnumConstants();
 			if(NumberUtils.isNumber(item.toString())) {
@@ -513,7 +840,7 @@ public class DocumentHelper {
 	}
 
 	private static Collection<Date> buildDateCollection(ObjectField columnDefinition, List<?> items) throws ParseException {
-		Collection<Date> v = new HashSet<>();
+		Collection<Date> v = new ArrayList<>();
 		for(Object item : items) {
 			v.add(Utils.parseDateTime(checkForAndPerformDecryption(columnDefinition, item.toString())));
 		}
@@ -521,7 +848,7 @@ public class DocumentHelper {
 	}
 
 	private static Collection<Double> buildDoubleCollection(ObjectField columnDefinition, List<?> items) {
-		Collection<Double> v = new HashSet<>();
+		Collection<Double> v = new ArrayList<>();
 		for(Object item : items) {
 			v.add(Double.parseDouble(checkForAndPerformDecryption(columnDefinition, item.toString())));
 		}
@@ -529,7 +856,7 @@ public class DocumentHelper {
 	}
 
 	private static Collection<Float> buildFloatCollection(ObjectField columnDefinition, List<?> items) {
-		Collection<Float> v = new HashSet<>();
+		Collection<Float> v = new ArrayList<>();
 		for(Object item : items) {
 			v.add(Float.parseFloat(checkForAndPerformDecryption(columnDefinition, item.toString())));
 		}
@@ -537,7 +864,7 @@ public class DocumentHelper {
 	}
 
 	private static Collection<Long> buildLongCollection(ObjectField columnDefinition, List<?> items) {
-		Collection<Long> v = new HashSet<>();
+		Collection<Long> v = new ArrayList<>();
 		for(Object item : items) {
 			v.add(Long.parseLong(checkForAndPerformDecryption(columnDefinition, item.toString())));
 		}
@@ -545,7 +872,7 @@ public class DocumentHelper {
 	}
 
 	private static Collection<Integer> buildIntegerCollection(ObjectField columnDefinition, List<?> items) {
-		Collection<Integer> v = new HashSet<>();
+		Collection<Integer> v = new ArrayList<>();
 		for(Object item : items) {
 			v.add(Integer.parseInt(checkForAndPerformDecryption(columnDefinition, item.toString())));
 		}
@@ -553,11 +880,33 @@ public class DocumentHelper {
 	}
 
 	private static Collection<Boolean> buildBooleanCollection(ObjectField columnDefinition, List<?> items) {
-		Collection<Boolean> v = new HashSet<>();
+		Collection<Boolean> v = new ArrayList<>();
 		for(Object item : items) {
 			v.add(Boolean.parseBoolean(checkForAndPerformDecryption(columnDefinition, item.toString())));
 		}
 		return v;
+	}
+	
+	public static String generateContentHash(ObjectTemplate template, Document entity) {
+		
+		try {
+			SHA256Digest sha2 = new SHA256Digest();
+			generateObjectHash(entity, sha2);
+			byte[] tmp = new byte[16];
+			new Random().nextBytes(tmp);
+			sha2.update(tmp, 0, tmp.length);
+			sha2.finish();
+			return new String(Hex.encode(sha2.getEncodedState()), "UTF-8");
+		} catch (UnsupportedEncodingException e) {
+			throw new IllegalStateException(e.getMessage(), e);
+		}
+	}
+
+	public static void generateObjectHash(Document entity, SHA256Digest sha2) throws UnsupportedEncodingException {
+
+//		for(Map.Entry<String, Object> entry : entity.entrySet()) {
+//			
+//		}
 	}
 
 }
