@@ -5,6 +5,7 @@ import java.util.Collection;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.ConcurrentHashMap;
 
@@ -13,7 +14,7 @@ import org.bson.Document;
 
 import com.jadaptive.api.db.SearchField;
 import com.jadaptive.api.entity.ObjectException;
-import com.jadaptive.api.repository.UUIDDocument;
+import com.jadaptive.api.template.SortOrder;
 import com.jadaptive.app.db.DocumentDatabase;
 
 public class MockDocumentDatabaseImpl implements DocumentDatabase {
@@ -31,12 +32,12 @@ public class MockDocumentDatabaseImpl implements DocumentDatabase {
 	}
 	
 	@Override
-	public <E extends UUIDDocument> void insertOrUpdate(E obj, Document document, String table, String database) {
+	public void insertOrUpdate(Document document, String table, String database) {
 		
-		if(StringUtils.isBlank(obj.getUuid())) {
-			obj.setUuid(UUID.randomUUID().toString());
+		if(StringUtils.isBlank(document.getString("_id"))) {
+			document.put("_id", UUID.randomUUID().toString());
 		}
-		getCollection(table, database).put(obj.getUuid(), document);
+		getCollection(table, database).put(document.getString("_id"), document);
 
 	}
 
@@ -65,14 +66,14 @@ public class MockDocumentDatabaseImpl implements DocumentDatabase {
 	}
 	
 	@Override
-	public Iterable<Document> table(String table, String searchField, String searchValue, String database, int start, int length) {
+	public Iterable<Document> table(String table, String searchField, String searchValue, String database, int start, int length, SortOrder order, String sortField) {
 		Collection<Document> tmp = getCollection(table, database).values();
 		return new ArrayList<>(tmp).subList(start, Math.min(start + length, tmp.size()-1));
 	}
 
 	@Override
 	public Long count(String table, String database, SearchField... fields) {
-		return new Long(getCollection(table, database).size());
+		return Long.valueOf(getCollection(table, database).size());
 	}
 
 	@Override
@@ -117,7 +118,7 @@ public class MockDocumentDatabaseImpl implements DocumentDatabase {
 	}
 
 	@Override
-	public Iterable<Document> searchTable(String table, String database, int start, int length, SearchField... fields) {
+	public Iterable<Document> searchTable(String table, String database, int start, int length, SortOrder order, String sortField, SearchField... fields) {
 		// TODO Auto-generated method stub
 		return null;
 	}
@@ -168,6 +169,48 @@ public class MockDocumentDatabaseImpl implements DocumentDatabase {
 	public void delete(String table, String database, SearchField... fields) {
 		// TODO Auto-generated method stub
 		
+	}
+
+	@Override
+	public void dropSchema() {
+
+	}
+
+	@Override
+	public Iterable<Document> search(String table, String database, SortOrder order, String sortField,
+			SearchField... fields) {
+		// TODO Auto-generated method stub
+		return null;
+	}
+
+	@Override
+	public void doInTransaction(Runnable r) {
+		// TODO Auto-generated method stub
+		
+	}
+
+	@Override
+	public Long sum(String table, String database, String groupBy, SearchField... fields) {
+		// TODO Auto-generated method stub
+		return 0L;
+	}
+
+	@Override
+	public void dropIndexes(String table, String database) {
+		// TODO Auto-generated method stub
+		
+	}
+
+	@Override
+	public Set<String> getIndexNames(String table, String database) {
+		// TODO Auto-generated method stub
+		return null;
+	}
+
+	@Override
+	public boolean isTransactionActive() {
+		// TODO Auto-generated method stub
+		return false;
 	}
 
 }
